[tool.poetry]
name = "flask-hexagonal"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
pydantic = "^1.9.0"
Flask-RESTful = "^0.3.9"
falcon = "^3.1.0"
gunicorn = "^20.1.0"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
redis = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
