[tool.poetry]
name = "flask-hexagonal"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
pydantic = "^1.9.0"
Flask-RESTful = "^0.3.9"
falcon = "^3.1.0"
gunicorn = "^20.1.0"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"
redis = "^4.3.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
unify = "^0.5"
mypy = "^0.961"
pytest-env = "^0.6.2"
types-redis = "^4.2.6"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
exclude = "(alembic/*)"
